replace read icon with play icon

--- a/src/styl/_home.styl
+++ b/src/styl/_home.styl
@@ -71,7 +71,7 @@
         a
             color accentDark
     .box-body
-        img 
+        img
             width 100%
             height auto
             margin 0 auto
@@ -88,7 +88,7 @@
             color accentDark
             line-height rem(30px)
             span
-                color 
+                color
         p
             margin 0 0 rem(30px)
             color darken(lightGray, 20%)
@@ -128,10 +128,10 @@
             a:before
                 opacity 0
                 background-color rgba(0, 0, 0, 0.7)
-                background-image url(../../assets/img/icons/read.svg)
-                background-size 48px
+                background-image url(../../assets/img/icons/play-button-no-circle.svg)
+                background-size 40px
                 background-repeat no-repeat
-                background-position center center
+                background-position 60% 50%
                 content ''
                 display block
                 width rem(80px)
