--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,6 +1,6 @@
 <ul>
   <li>
-    <a href="{{ site.url }}{{site.baseurl}}/">Home</a>
+    <a href="{{ site.url }}{{site.baseurl}}/">Accueil</a>
   </li>
   {% for page in site.pages %}
     {% if page.menu %}
@@ -9,12 +9,9 @@
       </li>
     {% endif %}
   {% endfor %}
-  {% if site.email %}
+  <!-- {% if site.email %}
     <li>
       <a href="{{ site.url }}{{site.baseurl}}/contact/">Contact</a>
     </li>
-  {% endif %}
-  <li>
-    <a class="feed" href="{{ site.url }}{{site.baseurl}}/feed.xml" title="Atom/RSS feed">Feed</a>
-  </li>
+  {% endif %} -->
 </ul>
