--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,9 @@
             {{ site.name }}
         </a>
     </h1>
-    <a id="search" class="dosearch" role="button">
+    <!-- <a id="search" class="dosearch" role="button">
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
-    </a>
+    </a> -->
 </header>
 
 <div id="mask" class="overlay"></div>
